[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/DateEndings.gd" type="Script" id=1]
[ext_resource path="res://sprites/endings/coppo_ending.png" type="Texture" id=2]
[ext_resource path="res://sprites/endings/ember_ending.png" type="Texture" id=3]
[ext_resource path="res://fonts/Bromine.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://sprites/environment/ending_background.png" type="Texture" id=5]
[ext_resource path="res://sprites/endings/vandal_ending.png" type="Texture" id=6]
[ext_resource path="res://sprites/endings/stoney_ending.png" type="Texture" id=7]
[ext_resource path="res://sprites/endings/robbin_ending.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 60
outline_size = 5
outline_color = Color( 0.921569, 0.909804, 0.909804, 1 )
font_data = ExtResource( 4 )

[sub_resource type="StreamTexture" id=3]
flags = 4
load_path = "res://.import/bar.png-2acf716bc35017eb3158694bd1697bea.stex"

[sub_resource type="DynamicFont" id=2]
size = 54
font_data = ExtResource( 4 )

[node name="DateEndings" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 960, 540 )
texture = ExtResource( 5 )

[node name="CoppoEnding" type="Sprite" parent="."]
visible = false
position = Vector2( 960, 540 )
texture = ExtResource( 2 )

[node name="EmberEnding" type="Sprite" parent="."]
visible = false
position = Vector2( 960, 540 )
texture = ExtResource( 3 )

[node name="RobbinEnding" type="Sprite" parent="."]
visible = false
position = Vector2( 960, 540 )
texture = ExtResource( 8 )

[node name="StoneyEnding" type="Sprite" parent="."]
position = Vector2( 960, 540 )
texture = ExtResource( 7 )

[node name="VandalEnding" type="Sprite" parent="."]
visible = false
position = Vector2( 960, 540 )
texture = ExtResource( 6 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 70.0
margin_top = 51.0
margin_right = 1139.0
margin_bottom = 174.0
custom_colors/font_color = Color( 0, 0.00392157, 0.00392157, 1 )
custom_fonts/font = SubResource( 1 )
text = "Looks like even criminals can find love...

Thank you for playing!"

[node name="BarSprite" type="Sprite" parent="."]
position = Vector2( 1541, 98 )
scale = Vector2( 0.825092, 0.577564 )
texture = SubResource( 3 )

[node name="ActionLabel" type="Label" parent="BarSprite"]
margin_left = -460.0
margin_top = -57.0
margin_right = 431.0
margin_bottom = 74.0
rect_scale = Vector2( 1, 1.33 )
custom_colors/font_color = Color( 0.207843, 0.14902, 0.294118, 1 )
custom_fonts/font = SubResource( 2 )
text = "PRESS SPACE
TO GO TO TITLE SCREEN"
align = 1
valign = 1
